1. The Samba vfs_bifrost shared object library depends on the bifrost_api C/C++ shared library. The later is a C wrapper around the C++ code, jsoncpp, cpp-netlib, ... The bifrost_api directory is a temporary home for the bifrost_api project.
2. create_fs.py is construct a Python in memory representation of the
folder hierarchy returned by the by the bifrost HTTP API.

--- a/unuvero/snippets/bifrost_api/.project
+++ b/unuvero/snippets/bifrost_api/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>samba</name>
+	<name>bifrost_api</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -8,11 +8,6 @@
 		<buildCommand>
 			<name>org.eclipse.cdt.managedbuilder.core.genmakebuilder</name>
 			<triggers>clean,full,incremental,</triggers>
-			<arguments>
-			</arguments>
-		</buildCommand>
-		<buildCommand>
-			<name>org.python.pydev.PyDevBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
@@ -28,6 +23,5 @@
 		<nature>org.eclipse.cdt.core.ccnature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.managedBuildNature</nature>
 		<nature>org.eclipse.cdt.managedbuilder.core.ScannerConfigNature</nature>
-		<nature>org.python.pydev.pythonNature</nature>
 	</natures>
 </projectDescription>
