the "host allow" changes are the only definitely necessary changes. a unu-vero samba share is only for the host machine it is running on, other machines on the network should not see it.

--- a/samba_wip/samba/smb.conf
+++ b/samba_wip/samba/smb.conf
@@ -55,7 +55,7 @@
    log file = /var/log/samba/log.%m
 
 # Put a capping on the size of the log files (in Kb).
-   max log size = 50
+   max log size = 1000
 
 # Specifies the Kerberos or Active Directory realm the host is part of
 ;   realm = MY_REALM
@@ -84,11 +84,11 @@
 
 # Windows Internet Name Serving Support Section:
 # WINS Support - Tells the NMBD component of Samba to enable it's WINS Server
-;   wins support = yes
+    wins support = yes
 
 # WINS Server - Tells the NMBD components of Samba to be a WINS Client
 #	Note: Samba can be either a WINS Server, or a WINS Client, but NOT both
-;   wins server = w.x.y.z
+;   wins server = unu-vero
 
 # WINS Proxy - Tells Samba to answer name resolution queries on
 # behalf of a non WINS capable client, for this to work there must be
@@ -116,7 +116,12 @@
    passwd chat = *Enter\snew\s*\spassword:* %n\n *Retype\snew\s*\spassword:* %n\n *password\supdated\ssuccessfully* .
    unix password sync = Yes
    syslog = 0
+   aio read size = 1024
+   aio write size = 1024
 
+   hosts allow = 127.0.0.1 192.168.
+   log level = 10
+   async smb echo handler = yes
 #============================ Share Definitions ==============================
 ;[homes]
    ;comment = Home Directories
@@ -236,9 +241,12 @@
 ;       read only = yes
 ;       guest ok = no
 
-[Documents]
-	path = /home/gsilverman/Documents
-        vfs objects = bifrost
+[c1]
+	path = /home/gsilverman/Documents/c1
+;       vfs objects = bifrost
         writeable = yes
 	read only = No
-	guest ok = Yes
+	vfs objects = aio_pthread
+        guest ok = yes
+        create mask = 0777
+        directory mask = 0777
